HBASE-26940 Update the doc for read replica configuration (#4332)

--- a/src/main/asciidoc/_chapters/architecture.adoc
+++ b/src/main/asciidoc/_chapters/architecture.adoc
@@ -3011,20 +3011,6 @@ Instead you can change the number of region replicas per table to increase or de
       Whether asynchronous WAL replication to the secondary region replicas is enabled or not. If this is enabled, a replication peer named "region_replica_replication" will be created which will tail the logs and replicate the mutations to region replicas for tables that have region replication > 1. If this is enabled once, disabling this replication also requires disabling the replication peer using shell or Admin java class. Replication to secondary region replicas works over standard inter-cluster replication.
     </description>
 </property>
-<property>
-  <name>hbase.region.replica.replication.memstore.enabled</name>
-  <value>true</value>
-  <description>
-    If you set this to `false`, replicas do not receive memstore updates from
-    the primary RegionServer. If you set this to `true`, you can still disable
-    memstore replication on a per-table basis, by setting the table's
-    `REGION_MEMSTORE_REPLICATION` configuration property to `false`. If
-    memstore replication is disabled, the secondaries will only receive
-    updates for events like flushes and bulkloads, and will not have access to
-    data which the primary has not yet flushed. This preserves the guarantee
-    of row-level consistency, even when the read requests `Consistency.TIMELINE`.
-  </description>
-</property>
 
 <property>
     <name>hbase.master.hfilecleaner.ttl</name>
@@ -3045,7 +3031,7 @@ Instead you can change the number of region replicas per table to increase or de
  <name>hbase.region.replica.wait.for.primary.flush</name>
     <value>true</value>
     <description>
-      Whether to wait for observing a full flush cycle from the primary before start serving data in a secondary. Disabling this might cause the secondary region replicas to go back in time for reads between region movements.
+      Whether to wait for observing a full flush cycle from the primary before start serving data in a secondary. Disabling this might cause the secondary region replicas to go back in time for reads between region movements.Please note that if you set per-table property `REGION_MEMSTORE_REPLICATION` to false,`hbase.region.replica.wait.for.primary.flush` will be ignored.
     </description>
 </property>
 ----
@@ -3110,6 +3096,9 @@ You can also see the replica ids shown explicitly in the UI.
 Region replication is a per-table property.
 All tables have `REGION_REPLICATION = 1` by default, which means that there is only one replica per region.
 You can set and change the number of replicas per region of a table by supplying the `REGION_REPLICATION` property in the table descriptor.
+
+There is another per-table property `REGION_MEMSTORE_REPLICATION`.All tables have `REGION_MEMSTORE_REPLICATION = true`
+by default, which means the new data written to the primary region should be replicated. If you set this to `false`, replicas do not receive memstore updates from the primary RegionServer,they will only receive updates for events like flushes and bulkloads, and will not have access to data which the primary has not yet flushed. Please note that if you set `REGION_MEMSTORE_REPLICATION` to false,`hbase.region.replica.wait.for.primary.flush` will be ignored.
 
 
 ==== Shell
