HBASE-27288 Update compatibility matrix and release manager section in our ref guide about the EOL of 1.x

--- a/src/main/asciidoc/_chapters/community.adoc
+++ b/src/main/asciidoc/_chapters/community.adoc
@@ -140,8 +140,8 @@ If this list goes out of date or you can't reach the listed person, reach out to
 
 | 1.7
 | Reid Chan
-| Check the https://hbase.apache.org/downloads.html[download] page
-| *NOT YET*
+| 1.7.2
+| August 2022
 
 | 2.0
 | Michael Stack
