--- a/src/main/asciidoc/_chapters/configuration.adoc
+++ b/src/main/asciidoc/_chapters/configuration.adoc
@@ -315,15 +315,15 @@ link:https://hadoop.apache.org/cve_list.html[CVEs] so we drop the support in new
 
 .Hadoop version support matrix for active release lines
 
-[cols="1,3*^.^", options="header"]
+[cols="1,2*^.^", options="header"]
 |===
-| | HBase-2.3.x | HBase-2.4.x | HBase-2.5.x
-|Hadoop-2.10.x | icon:check-circle[role="green"] | icon:check-circle[role="green"] | icon:check-circle[role="green"]
-|Hadoop-3.1.[0-3] | icon:times-circle[role="red"] | icon:times-circle[role="red"] | icon:times-circle[role="red"]
-|Hadoop-3.1.4+ | icon:check-circle[role="green"] | icon:check-circle[role="green"] | icon:check-circle[role="green"]
-|Hadoop-3.2.[0,1] | icon:times-circle[role="red"] | icon:times-circle[role="red"] | icon:times-circle[role="red"]
-|Hadoop-3.2.2+ | icon:check-circle[role="green"] | icon:check-circle[role="green"] | icon:check-circle[role="green"]
-|Hadoop-3.3.x | icon:check-circle[role="green"] | icon:check-circle[role="green"] | icon:check-circle[role="green"]
+| | HBase-2.4.x | HBase-2.5.x
+|Hadoop-2.10.x | icon:check-circle[role="green"] | icon:check-circle[role="green"]
+|Hadoop-3.1.[0-3] | icon:times-circle[role="red"] | icon:times-circle[role="red"]
+|Hadoop-3.1.4+ | icon:check-circle[role="green"] | icon:check-circle[role="red"]
+|Hadoop-3.2.[0-2] | icon:times-circle[role="red"] | icon:times-circle[role="red"]
+|Hadoop-3.2.3+ | icon:check-circle[role="green"] | icon:check-circle[role="green"]
+|Hadoop-3.3.x | icon:check-circle[role="green"] | icon:check-circle[role="green"]
 |===
 
 .Hadoop version support matrix for EOM 2.x release lines
