--- a/src/main/asciidoc/_chapters/community.adoc
+++ b/src/main/asciidoc/_chapters/community.adoc
@@ -168,6 +168,11 @@ If this list goes out of date or you can't reach the listed person, reach out to
 | Check the https://hbase.apache.org/downloads.html[download] page
 | *NOT YET*
 
+| 2.5
+| Andrew Purtell
+| Check the https://hbase.apache.org/downloads.html[download] page
+| *NOT YET*
+
 |===
 
 [[hbase.commit.msg.format]]
